# NLP-furry-detector

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  twitter_key.json
.github/workflows/: black.yml
data/: stop_words.json  word_list.json
model/: furry_detector.py  model.h5  parser.py
model/model_data/: model.h5  model.json
model/parse_data/: word_list.json
twitter/: wrapper.py
